--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -9,7 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll",
+    "test": "jest",
     "coverage": "jest --coverage --no-cache",
     "lint": "eslint --fix --ext .ts,.tsx,.js",
     "prettier": "prettier --write src**/*.{js,ts,tsx}",
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^6.2.1",
     "babel-loader": "^8.2.5",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-status-bar": "~1.2.0",
     "jest-expo": "^44.0.1",
     "react": "17.0.1",
