--- a/Laza-ecommerce/app.json
+++ b/Laza-ecommerce/app.json
@@ -1,14 +1,15 @@
 {
   "expo": {
-    "name": "rn-training",
-    "slug": "rn-training",
+    "name": "Laza-ecommerce",
+    "slug": "laza-ecommerce",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/images/icon.png",
     "splash": {
       "image": "./src/assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#3D93F8"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -16,15 +17,6 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./src/assets/images/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./src/assets/images/favicon.png"
     }
   }
 }
