update config use unknow in catch.

--- a/Laza-ecommerce/tsconfig.json
+++ b/Laza-ecommerce/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "useUnknownInCatchVariables": false,
     "baseUrl": "./",
     "paths": {
       "*": ["./src/*"],
