--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --fix --ext .ts,.tsx,.js",
     "prettier": "prettier --write src**/*.{js,ts,tsx}",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "data": "json-server --watch server/db.json --port 3001",
     "server": "nodemon server/index.js"
   },
   "dependencies": {
@@ -57,6 +58,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^27.4.1",
     "@types/react": "~17.0.21",
@@ -90,7 +92,7 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
-    "setupFiles": [
+    "setupFilesAfterEnv": [
       "<rootDir>/src/__mocks__/globalMock.js"
     ],
     "collectCoverage": true,
