--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "fetch-mock-jest": "^1.5.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.6.2",
