--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -38,6 +38,7 @@
     "query-string": "^7.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-fast-compare": "^3.2.0",
     "react-hook-form": "^7.31.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
