Update config production build

--- a/Laza-ecommerce/app.json
+++ b/Laza-ecommerce/app.json
@@ -18,7 +18,7 @@
     "ios": {
       "supportsTablet": true,
       "requireFullScreen": true,
-      "bundleIdentifier": "y"
+      "bundleIdentifier": "com.asnet.laza"
     },
     "android": {
       "adaptiveIcon": {
