--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -19,38 +19,39 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@hookform/resolvers": "^2.8.8",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
     "body-parser": "^1.20.0",
-    "expo": "~45.0.4",
-    "expo-app-loading": "~2.0.0",
+    "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-community-flipper": "^45.1.0",
-    "expo-dev-client": "^1.0.0",
-    "expo-status-bar": "~1.3.0",
+    "expo-dev-client": "~0.8.5",
+    "expo-status-bar": "~1.2.0",
     "jest-expo": "^44.0.1",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
     "query-string": "^7.1.1",
-    "react": "17.0.2",
+    "react": "17.0.1",
     "react-devtools-core": "^4.24.7",
-    "react-dom": "17.0.2",
+    "react-dom": "17.0.1",
     "react-fast-compare": "^3.2.0",
     "react-hook-form": "^7.31.1",
-    "react-native": "0.68.2",
+    "react-native": "0.64.3",
     "react-native-flipper": "^0.146.1",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "0.17.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -72,7 +73,6 @@
     "@typescript-eslint/parser": "^5.19.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.14.0",
     "eslint-config-airbnb": "^19.0.4",
