--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -17,7 +17,6 @@
     "server": "nodemon server/index.js"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.2",
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -63,7 +62,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react-native": "^9.1.0",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^26.0.23",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-vector-icons": "^6.4.10",
@@ -72,12 +71,9 @@
     "@typescript-eslint/parser": "^5.19.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "7.14.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "fetch-mock-jest": "^1.5.1",
@@ -88,7 +84,7 @@
     "typescript": "~4.3.5"
   },
   "resolutions": {
-    "@types/react": "17.0.44"
+    "@types/react": "^17"
   },
   "private": true,
   "jest": {
