--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -14,7 +14,9 @@
     "lint": "eslint --fix --ext .ts,.tsx,.js",
     "prettier": "prettier --write ./**/*.{js,ts,tsx}",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "server": "nodemon server/index.js"
+    "server": "nodemon server/index.js",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
@@ -27,29 +29,20 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "expo": "~44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-community-flipper": "^45.1.0",
-    "expo-dev-client": "~0.8.5",
     "expo-status-bar": "~1.2.0",
-    "jest-expo": "^44.0.1",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
     "query-string": "^7.1.1",
     "react": "17.0.1",
-    "react-devtools-core": "^4.24.7",
     "react-dom": "17.0.1",
     "react-fast-compare": "^3.2.0",
     "react-hook-form": "^7.31.1",
     "react-native": "0.64.3",
-    "react-native-flipper": "^0.146.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -60,6 +53,13 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.25",
+    "@storybook/react-native": "^5.3.25",
+    "@storybook/react-native-server": "^5.3.23",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^26.0.23",
@@ -71,15 +71,21 @@
     "@typescript-eslint/parser": "^5.19.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "fetch-mock-jest": "^1.5.1",
+    "jest-expo": "^44.0.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.6.2",
+    "expo-dev-client": "~0.8.5",
+    "expo-community-flipper": "^45.1.0",
+    "react-native-flipper": "^0.146.1",
+    "react-devtools-core": "^4.24.7",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
