--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -39,6 +39,7 @@
     "react-fast-compare": "^3.2.0",
     "react-hook-form": "^7.31.1",
     "react-native": "0.64.3",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
@@ -77,15 +78,15 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "expo-community-flipper": "^45.1.0",
+    "expo-dev-client": "~0.8.5",
     "fetch-mock-jest": "^1.5.1",
-    "jest-expo": "^44.0.1",
     "jest": "^26.6.3",
+    "jest-expo": "^44.0.1",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.6.2",
-    "expo-dev-client": "~0.8.5",
-    "expo-community-flipper": "^45.1.0",
-    "react-native-flipper": "^0.146.1",
     "react-devtools-core": "^4.24.7",
+    "react-native-flipper": "^0.146.1",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
