Update: config run dev & pre build.

--- a/Laza-ecommerce/app.json
+++ b/Laza-ecommerce/app.json
@@ -31,7 +31,6 @@
     "extra": {
       "flipperHack": "React Native packager is running"
     },
-    "plugins": ["expo-community-flipper"],
-    "jsEngine": "hermes"
+    "plugins": ["expo-community-flipper"]
   }
 }
