--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -1,12 +1,11 @@
 {
   "name": "react-training",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "author": "quang.pham<quang.pham@asnet.com.vn>",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --config jest.config.js",
@@ -44,7 +43,8 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-splash-screen": "~0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
