Update: config platforms

--- a/Laza-ecommerce/app.json
+++ b/Laza-ecommerce/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Laza-ecommerce",
     "slug": "laza-ecommerce",
-    "platforms": ["ios", "android", "web"],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/images/icon.png",
