--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -44,7 +44,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "yup": "^0.32.11",
-    "expo-splash-screen": "~0.14.1"
+    "expo-splash-screen": "~0.14.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
