Update: config sentry expo

--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -4,6 +4,8 @@
   "author": "quang.pham<quang.pham@asnet.com.vn>",
   "scripts": {
     "start": "expo start --dev-client",
+    "clean-android": "cd android && ./gradlew clean && cd ..",
+    "clean-ios": "cd ios && xcodebuild clean && cd ..",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -12,6 +14,7 @@
     "coverage": "jest --coverage --no-cache",
     "lint": "eslint --fix --ext .ts,.tsx,.js",
     "prettier": "prettier --write ./**/*.{js,ts,tsx}",
+    "pod": "cd ios && pod install && cd ..",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "server": "nodemon server/index.js",
     "storybook": "start-storybook -p 7007",
@@ -25,10 +28,17 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
+    "@sentry/react-native": "^4.0.0",
+    "@sentry/tracing": "^7.2.0",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "expo": "~44.0.0",
+    "expo-application": "~4.0.1",
+    "expo-constants": "~13.0.1",
+    "expo-device": "~4.1.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
@@ -43,9 +53,9 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "yup": "^0.32.11",
-    "expo-splash-screen": "~0.14.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "sentry-expo": "^4.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -88,6 +98,7 @@
     "prettier": "^2.6.2",
     "react-devtools-core": "^4.24.7",
     "react-native-flipper": "^0.146.1",
+    "react-native-performance-flipper-reporter": "^3.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
