--- a/Laza-ecommerce/package.json
+++ b/Laza-ecommerce/package.json
@@ -100,6 +100,7 @@
     "react-native-flipper": "^0.146.1",
     "react-native-performance-flipper-reporter": "^3.0.0",
     "react-test-renderer": "17.0.2",
+    "reactotron-react-native": "^5.0.2",
     "typescript": "~4.3.5"
   },
   "resolutions": {
