--- a/Laza-ecommerce/tsconfig.json
+++ b/Laza-ecommerce/tsconfig.json
@@ -1,19 +1,28 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    /* Basic Options */
+    "target": "esnext",
+    "lib": ["es2017"],
+    "jsx": "react-native",
     "allowJs": true,
     "noEmit": true,
+    "isolatedModules": true,
+    /*JS Modules */
+    "module": "commonjs",
+    /* Module Resolution Options */
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "target": "es5",
-    "module": "commonjs",
-    "jsx": "react",
-    "strict": true,
+    /* Interop Constraints */
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    /* Strict Type-Checking Options */
+    "strict": true,
+    /* Completeness */
+    "skipLibCheck": true,
     "useUnknownInCatchVariables": false,
+
     "baseUrl": "./src",
     "paths": {
       "src/*": ["./src/*"],
