--- a/Elaza/package.json
+++ b/Elaza/package.json
@@ -35,6 +35,7 @@
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-config": "^1.4.11",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
@@ -47,9 +48,9 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-links": "^6.5.12",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addon-links": "^5.3.21",
     "@storybook/addon-ondevice-actions": "^5.3.23",
     "@storybook/addon-ondevice-knobs": "^5.3.26",
     "@storybook/react-native": "^5.3.25",
