--- a/Elaza/package.json
+++ b/Elaza/package.json
@@ -1,7 +1,10 @@
 {
   "name": "Elaza",
   "version": "0.0.1",
-  "private": true,
+  "author": {
+    "name": "William Pham",
+    "email": "quang.pham@asnet.com.vn"
+  },
   "scripts": {
     "android": "react-native run-android",
     "android:dev": "react-native run-android --variant=devDebug --appIdSuffix=dev",
