--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ios:iPSE2020": "react-native run-ios --simulator 'iPhone SE (2nd generation)' --scheme 'Elaza'",
     "ios:iP12ProMax": "react-native run-ios --simulator 'iPhone 12 Pro Max' --scheme 'Elaza'",
     "start": "react-native start",
+    "clean-android": "cd android && ./gradlew clean && cd ..",
+    "clean-ios": "cd ios && xcodebuild clean && cd ..",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "android:stag": "react-native run-android --variant=stagDebug --appIdSuffix=stag",
     "test": "jest --passWithNoTests",
