--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "^3.18.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-switch": "^1.5.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
