--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native": "0.70.0",
     "react-native-config": "^1.4.11",
     "react-native-exception-handler": "^2.10.10",
+    "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
