--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@shopify/flash-list": "^1.3.1",
     "apisauce": "^2.1.6",
     "babel-plugin-dotenv-import": "^3.0.1",
     "patch-package": "^6.4.7",
