--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prepare": "husky install",
     "lint-staged": "lint-staged",
     "pre-commit": ".husky/pre-commit",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "server": "nodemon server/index.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -38,7 +39,12 @@
     "@shopify/flash-list": "^1.3.1",
     "apisauce": "^2.1.6",
     "babel-plugin-dotenv-import": "^3.0.1",
+    "body-parser": "^1.20.1",
+    "json-server": "^0.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.20",
     "patch-package": "^6.4.7",
+    "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-hook-form": "^7.38.0",
     "react-native": "0.70.0",
