Implement Login screen

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-API_URL=https://myapi.com
+API_BASE_URL=https://myapi.com
 GOOGLE_MAPS_API_KEY=abcdefgh
+SIZE_MATTERS_BASE_WIDTH=375
+SIZE_MATTERS_BASE_HEIGHT=812
