--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "android": "react-native run-android",
     "android:dev": "react-native run-android --variant=devDebug --appIdSuffix=dev",
+    "android:stag": "react-native run-android --variant=stagDebug --appIdSuffix=stag",
     "ios": "react-native run-ios",
     "ios:iP8": "react-native run-ios --simulator 'iPhone 8' --scheme 'Elaza'",
     "ios:iP8+": "react-native run-ios --simulator 'iPhone 8 Plus' --scheme 'Elaza'",
@@ -20,9 +21,8 @@
     "ios:iP13Pro": "react-native run-ios --simulator 'iPhone 13 Pro' --scheme 'Elaza'",
     "start": "react-native start",
     "clean-android": "cd android && ./gradlew clean && cd ..",
-    "clean-ios": "cd ios && xcodebuild clean && cd ..",
+    "clean-ios": "xcodebuild clean -workspace ios/Elaza.xcworkspace -scheme Elaza",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "android:stag": "react-native run-android --variant=stagDebug --appIdSuffix=stag",
     "test": "jest --passWithNoTests",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook",
@@ -61,6 +61,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-switch": "^1.5.1",
+    "react-native-vector-icons": "^9.1.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
@@ -88,11 +89,17 @@
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
+    "flipper-plugin-react-native-performance": "^0.6.0",
     "husky": "^8.0.1",
     "imagemin-lint-staged": "^0.5.1",
     "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
     "metro-react-native-babel-preset": "^0.72.1",
+    "react-devtools-core": "^4.24.7",
+    "react-native-flipper": "^0.174.0",
+    "react-native-flipper-performance-plugin": "0.4.0-rc.0",
+    "react-native-performance": "^4.0.0",
+    "react-native-performance-flipper-reporter": "^4.0.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.2"
   },
