--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,7 @@ def enableSeparateBuildPerCPUArchitecture = false
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore.
@@ -218,6 +218,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('Elaza.keystore')
+            storePassword 'Elaza@123'
+            keyAlias 'Elaza-v1'
+            keyPassword 'Elaza@123'
+        }
     }
     buildTypes {
         debug {
@@ -226,7 +232,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -269,6 +275,11 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
     }
+
+    debugImplementation 'com.facebook.flipper:flipper:0.174.0'
+    debugImplementation 'com.facebook.soloader:soloader:0.10.4'
+
+    releaseImplementation 'com.facebook.flipper:flipper-noop:0.174.0'
 
     if (enableHermes) {
         //noinspection GradleDynamicVersion
