--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.11",
@@ -52,9 +53,11 @@
     "react-hook-form": "^7.38.0",
     "react-native": "0.70.0",
     "react-native-config": "^1.4.11",
+    "react-native-device-info": "^10.2.1",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.1",
@@ -81,6 +84,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.6",
+    "@types/react-native-push-notification": "^8.1.1",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
