--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.6",
     "@types/react-native-push-notification": "^8.1.1",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.1.3",
@@ -100,6 +101,7 @@
     "lint-staged": "^13.0.3",
     "metro-react-native-babel-preset": "^0.72.1",
     "react-devtools-core": "^4.24.7",
+    "react-native-asset": "^2.0.1",
     "react-native-flipper": "^0.174.0",
     "react-native-flipper-performance-plugin": "0.4.0-rc.0",
     "react-native-performance": "^4.0.0",
